# nums

./: Cargo.toml  README.md  gaps_3.txt  gaps_3_old.txt  gaps_4.txt
src/: lib.rs  main.rs  output.rs  solver.rs
src/fastgame/: calculation.rs  mod.rs
src/game/: calculation.rs  mod.rs
